bro/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bro
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: bro
  template:
    metadata:
      labels:
        app: bro
    spec:
      containers:
        - name: bro
          image: ghcr.io/pmh-only/bro:latest
          volumeMounts:
            - mountPath: /home/opencode
              name: bro-pvc
            - name: docker-sock
              mountPath: /var/run
        - name: dind
          image: docker:29-dind
          securityContext:
            privileged: true
          args:
            - --host=unix:///var/run/docker.sock
          volumeMounts:
            - name: docker-sock
              mountPath: /var/run
      volumes:
        - name: bro-pvc
          persistentVolumeClaim:
            claimName: bro-pvc
        - name: docker-sock
          emptyDir: {}
